[project]
name = "indexter-rlm"
version = "0.1.0"
description = "RLM-style context environment for coding agents - recursive navigation over semantic code"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Marcus Chen"}
]
keywords = ["cli", "mcp", "rag", "rlm", "vector-search", "tree-sitter", "code-indexing", "ai-agents", "context-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.0.0",
    "pathspec>=0.12.1",
    "qdrant-client[fastembed]>=1.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tomli>=2.0.0",
    "tomlkit>=0.13.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
full = [
    "fastmcp>=0.4.1",
    "openai>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
]
cli = [
    "rich>=13.9.0",
    "typer>=0.12.0",
]
mcp = [
    "fastmcp>=0.4.1",
]
openai = [
    "openai>=1.0.0",
]
core = []

[dependency-groups]
dev = [
    "fastmcp>=0.4.1",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "ruff>=0.14.10",
    "rust-just>=1.45.0",
    "ty>=0.0.6",
]
test = [
    {include-group = "dev"},
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "inline-snapshot>=0.15.0",
    "dirty-equals>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/marcusche/indexter-rlm"
Repository = "https://github.com/marcusche/indexter-rlm"
Documentation = "https://github.com/marcusche/indexter-rlm#readme"
"Bug Tracker" = "https://github.com/marcusche/indexter-rlm/issues"
Changelog = "https://github.com/marcusche/indexter-rlm/blob/main/CHANGELOG.md"

[project.scripts]
indexter-rlm = "indexter_rlm.cli:app"
rlm-mcp = "indexter_rlm.mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexter_rlm"]

[tool.pytest.ini_options]
addopts = ["--pyargs"]
asyncio_mode = "auto"

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
fixable = ["E", "F", "I", "UP"]
unfixable = ["S", "B"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S"]
